[gd_scene load_steps=10 format=3 uid="uid://d17whemj043ju"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_8yfsf"]
[ext_resource type="PackedScene" uid="uid://cawxkjr0crfs5" path="res://scenes/ceiling.tscn" id="1_duuc4"]
[ext_resource type="PackedScene" uid="uid://cv88q5msxfsd0" path="res://scenes/score.tscn" id="1_ky4ox"]
[ext_resource type="PackedScene" uid="uid://j8n7lxerx3ff" path="res://scenes/center_line.tscn" id="2_iruw1"]
[ext_resource type="PackedScene" uid="uid://cgpf0x261w2mr" path="res://scenes/ball.tscn" id="3_tp63j"]
[ext_resource type="PackedScene" uid="uid://cgq1tygeuadx6" path="res://scenes/player_1_paddle.tscn" id="4_a8liq"]
[ext_resource type="PackedScene" uid="uid://cn1hvorne8hod" path="res://scenes/player_2_paddle.tscn" id="5_38ji0"]
[ext_resource type="PackedScene" uid="uid://rflk4bxrj0u6" path="res://scenes/UI.tscn" id="8_mjkoc"]
[ext_resource type="PackedScene" uid="uid://dwxnrle0p8d30" path="res://scenes/pauseMenu.tscn" id="9_aemsi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8yfsf")

[node name="Player 1 Edge" parent="." instance=ExtResource("1_ky4ox")]

[node name="Player 2 Edge" parent="." instance=ExtResource("1_ky4ox")]
position = Vector2(620, 0)

[node name="Center line" parent="." instance=ExtResource("2_iruw1")]

[node name="Ceiling" parent="." instance=ExtResource("1_duuc4")]

[node name="Floor" parent="." instance=ExtResource("1_duuc4")]
position = Vector2(0, 345)

[node name="Player 1 Paddle" parent="." instance=ExtResource("4_a8liq")]

[node name="Player 2 Paddle" parent="." node_paths=PackedStringArray("ball") instance=ExtResource("5_38ji0")]
center_of_mass_mode = 1
ball = NodePath("../Ball")

[node name="Ball" parent="." instance=ExtResource("3_tp63j")]

[node name="Ui" parent="." instance=ExtResource("8_mjkoc")]

[node name="PauseMenu" parent="." instance=ExtResource("9_aemsi")]
offset_left = 220.0
offset_top = 130.0
offset_right = 220.0
offset_bottom = 130.0
scale = Vector2(1.5, 1.5)

[connection signal="point_scored" from="Player 1 Edge" to="." method="_on_playe1_scored"]
[connection signal="point_scored" from="Player 2 Edge" to="." method="_on_player2_scored"]
